Assn05 - 3.9 - getMax